--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -20,6 +20,9 @@ jobs:
   build-image:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout the repository
+        uses: actions/checkout@v3
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
 
